--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -129,8 +129,17 @@
   school = {Ecole Nationale Superieure des Sciences de l'Information et des Bibliotheques (ENSSIB)},
   year = {1997},
   type = {Thèse},
-
 }
+
+@MASTERSTHESIS{ 
+  Kadri_et_benyamina1992,
+  author = {Y Kadri and A Benyamina},
+  title = {Système d’analyse syntaxico-semantique du langage arabe},
+  school = {université d’Oran, Es-sénia},
+  year = {1992},
+  type = {Thèse},
+}
+
 
 @MASTERSTHESIS{Zer08,
   author = { Taha Zerrouki },
